--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,3 +80,12 @@ services:
       - '--storage.path=/alertmanager'
     networks:
       - monitoring
+
+
+  custom-app:
+    build: .
+    container_name: my_app
+    ports:
+      - 8010:8010
+    networks:
+      - monitoring
